# kcollectd

./: .gitattributes  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL.rst  README.rst  config.h.in
doc/: CMakeLists.txt  kcollectd.1
doc/en/: CMakeLists.txt  index.docbook
kcollectd/: CMakeLists.txt  drag_pixmap.xpm  graph.cc  graph.h  gui.cc  gui.h  kcollectd.cc  kcollectd.desktop  kcollectd.xml  misc.cc  misc.h  rrd_interface.cc  rrd_interface.h  timeaxis.cc  timeaxis.h
kcollectd/icons/: CMakeLists.txt  mkicons  oxsc-app-kcollectd.svgz  oxsc-mime-application-x-kcollectd.svgz
po/: CMakeLists.txt  de.po  kcollectd.pot
